Code cleanup, using better API